# open-research-data-release-kit

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/ordk/: cli.py  schema.py
src/ordk/adapters/: nasa_omni.py  noaa.py  physionet_ptbxl.py
src/ordk/core/: publish.py  quality.py
tests/: test_ci_pipeline.py  test_cli.py  test_nasa_omni_adapter.py  test_noaa_adapter.py  test_physionet_ptbxl_adapter.py  test_publish.py  test_quality.py  test_schema.py  tet_ci_pipeline.py
