[project]
name = "open-research-data-release-kit"
version = "0.1.0"
description = "A reusable Python toolkit that turns messy scientific telemetry-style data into validated, documented, versioned, publication-ready data releases."
authors = [
    {name = "cwru-yash",email = "yxm595@case.edu"}
]
requires-python = ">=3.12"
dependencies = [
    "polars (>=1.40.1,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "typer (>=0.25.1,<0.26.0)",
    "rich (>=15.0.0,<16.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "ruff (>=0.15.13,<0.16.0)"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
